fidius-macro/tests/compile_fail/missing_version.rs
use fidius_macro::plugin_interface;

#[plugin_interface(buffer = PluginAllocated)]
pub trait BadPlugin: Send + Sync {
    fn do_thing(&self) -> String;
}

fn main() {}
